[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/spaceShip.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprites/Ship-sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/samples/ShipBullet.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/samples/ShipHit.wav" type="AudioStream" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

func _ready():
	pass
	
func _on_spaceShip_shoot_sfx():
	$shoot.play()


func _on_spaceShip_destroy_sfx():
	$destroy.play()
"

[sub_resource type="Animation" id=2]
resource_name = "destroy"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="spaceShip" type="Area2D"]
position = Vector2( 90, 267 )
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -7, 0, -6, -1, -1, -1, -1, -3, 0, -4, 1, -3, 1, -1, 6, -1, 7, 0, 7, 4, -7, 4, -7, 0 )

[node name="pos_shoot" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="sfxs" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="shoot" type="AudioStreamPlayer2D" parent="sfxs"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="destroy" type="AudioStreamPlayer2D" parent="sfxs"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="shoot_time" type="Timer" parent="."]
wait_time = 0.7

[node name="anim" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 2 )

[connection signal="destroy_sfx" from="." to="sfxs" method="_on_spaceShip_destroy_sfx"]
[connection signal="shoot_sfx" from="." to="sfxs" method="_on_spaceShip_shoot_sfx"]
